--- a/DingerLab/src/main/resources/static/css/about.css
+++ b/DingerLab/src/main/resources/static/css/about.css
@@ -51,7 +51,8 @@ section{
 
 .swiper-slide>img{
 	width : 100%;
-	height : 100%;
+	height : auto;
+	overflow: hidden;
 }
 
 h2{
@@ -69,5 +70,5 @@ h2{
 }
 
 .description{
-	line-height: 23px;
+	line-height: 30px;
 }
