--- a/DingerLab/src/main/resources/static/css/index.css
+++ b/DingerLab/src/main/resources/static/css/index.css
@@ -2,16 +2,26 @@
 
 html, body{
 	width : 100%;
-	height : 150%;
+	height : 1500px;
 }
 
 #video-section{
 	width : 100%;
-	height : 100%;
-	position : absolute;
 	z-index : 100;
 	background-size: cover;
 	overflow : hidden;
+}
+
+#image-layer{
+	width : 100%;
+	height : 100%;
+	
+	background-color: rgba(0,0,0,0.5);
+	
+	position : absolute;
+	overflow : hidden;
+	z-index : 200;
+	top : 0;
 }
 
 #image-layer>video{
@@ -27,17 +37,6 @@ html, body{
 	transform : translate(-50%, -65%);
 	
 	background-color: rgba(0,0,0,0.5);
-}
-
-#image-layer{
-	width : 100%;
-	height : 100%;
-	
-	background-color: rgba(0,0,0,0.5);
-	
-	position : absolute;
-	z-index : 200;
-	top : 0;
 }
 
 #icon-container{
