--- a/DingerLab/src/main/resources/static/css/market.css
+++ b/DingerLab/src/main/resources/static/css/market.css
@@ -1,8 +1,8 @@
 @CHARSET "UTF-8";
 
-html,body{
+body,html{
 	width : 100%;
-	height : auto;
+	height : 100%;
 }
 
 header{
@@ -13,13 +13,11 @@ header>a{
 	color : black;
 }
 
-
-#category-list>li:NTH-CHILD(2n)>a {
+#category-list>li:NTH-CHILD(3n)>a {
 	color : black;
 }
 
 #category-list>li>a,
-#category-list>li:NTH-CHILD(4n)>a,
 #category-list>li:NTH-CHILD(6n)>a{
 	color : rgba(0,0,0,0.5);
 }
@@ -27,27 +25,23 @@ header>a{
 #small-category-list{
 	display : block;
 }
+
 #small-category-list>li{
 	color : rgba(0,0,0,0.5);
 }
 
 #small-category-list>li:FIRST-CHILD{
 	width : calc(100%/6);
-	margin-left : calc(100%/6);
+	margin-left : calc(100%/6*2);
 	color : black;
 }
 
 section{
 	width : 80%;
-	max-height : 1000px;
+	max-width: 1000px;
 	height : auto;
-	
 	margin : 0 auto;
-	padding-top: 180px;
-}
-
-h3{
-	text-align: center;
+	padding-top : 180px;
 }
 
 #grid-section{
@@ -61,18 +55,12 @@ h3{
 	
 	list-style: none;
 	display : inline-block;
-	margin-top : 30px;
-}
-
-#grid-section>li:HOVER{
-	border : 0.5px solid rgba(0,0,0,0.4);
-	border-radius : 30px;
-	cursor : pointer;
+	margin-bottom : 30px;
 }
 
 .grid-cell{
 	width : 80%;
-	height : 100%;
+	height : auto;
 	margin : 0 auto;
 }
 
@@ -80,19 +68,24 @@ h3{
 	text-align: center;
 }
 
-.character-image{
-	width : 80%;
-	height : auto;
-	border-radius : 30px;
-	display : block;
-	margin : 0 auto;
-}
-
-.description{
+.market-thumnail{
 	width : 100%;
 	height : auto;
-	margin-top : 20px;
-	margin-bottom : 20px;
-	font-size : 15px;
-	line-height : 20px;
+	border-radius : 30px;
 }
+
+.description {
+    font-size: 15px;
+    height: auto;
+    line-height: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+}
+
+#grid-section>li:HOVER {
+	
+}
+
+
+
