--- a/DingerLab/src/main/resources/static/css/footer.css
+++ b/DingerLab/src/main/resources/static/css/footer.css
@@ -2,7 +2,7 @@
 
 footer{
 	width : 100%;
-	height : 250px;
+	height : 300px;
 	position : relative;
 }
 
@@ -23,6 +23,14 @@ footer{
 	position : absolute;
 	top : 0;
 	
-	background-color: rgba(255, 255, 255, 0.4);
+	background-color: rgba(255, 255, 255, 0.6);
 	z-index : 500;
+}
+
+#bg-layer-section>div{
+	width : 80%;
+	max-width : 1000px;
+	height : auto;
+	margin : 0 auto;
+	padding-top : 100px;
 }
