1. dingerlab 데이터베이스 생성 2. mybatis 연동(character 페이지) 3. css 수정(character 페이지)

--- a/DingerLab/src/main/resources/static/css/contact.css
+++ b/DingerLab/src/main/resources/static/css/contact.css
@@ -13,6 +13,14 @@ header>a{
 	color : black;
 }
 
+#language-list>li>a{
+	color : rgba(0,0,0,0.4);
+}
+
+.activate{
+	color : black !important;
+}
+
 #category-list>li>a{
 	color : rgba(0,0,0,0.5);
 }
