--- a/DingerLab/src/main/resources/static/css/character.css
+++ b/DingerLab/src/main/resources/static/css/character.css
@@ -3,6 +3,7 @@
 html,body{
 	width : 100%;
 	height : auto;
+	background-attachment: fixed;
 }
 
 header{
@@ -13,6 +14,13 @@ header>a{
 	color : black;
 }
 
+#language-list>li>a{
+	color : rgba(0,0,0,0.4);
+}
+
+.activate{
+	color : black !important;
+}
 
 #category-list>li:NTH-CHILD(2n)>a {
 	color : black;
@@ -48,19 +56,21 @@ section{
 
 h3{
 	text-align: center;
+	font-size: 14pt;
+	font-weight : bold;
 }
 
 #grid-section{
 	width : 100%;
-	height : auto;
+	height : 1200px;
 }
 
 #grid-section>li{
 	width : calc(100%/3.2);
-	height : auto;
+	height : 300px;
 	
 	list-style: none;
-	display : inline-block;
+	float : left;
 	margin-top : 30px;
 }
 
@@ -72,7 +82,7 @@ h3{
 
 .grid-cell{
 	width : 80%;
-	height : 100%;
+	height : 300px;
 	margin : 0 auto;
 }
 
@@ -93,6 +103,7 @@ h3{
 	height : auto;
 	margin-top : 20px;
 	margin-bottom : 20px;
-	font-size : 15px;
+	font-size : 11pt;
 	line-height : 20px;
+	text-align: center;
 }
