--- a/DingerLab/src/main/resources/static/css/header.css
+++ b/DingerLab/src/main/resources/static/css/header.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 html,body{
-	font-family: "Nanum Gothic", sans-serif;
+	font-family: "Nanum Gothic", sans-serif !important;
 }
 
 header{
@@ -11,6 +11,7 @@ header{
 	position : fixed;
 	z-index : 800;
 	background-color : rgba(255,255,255,0.4);
+	font-size : 18px !important;
 }
 
 a{
@@ -34,6 +35,23 @@ header>a{
 
 header>a>span{
 	color : red;
+}
+
+header>a:HOVER{
+	cursor: pointer !important;
+	color : black !important;
+	text-decoration: none;
+}
+
+a:HOVER{
+	cursor: pointer !important;
+	color : black !important;
+	text-decoration: none !important;
+}
+
+h3{
+	font-weight: bold !important;
+	font-size : 24px;
 }
 
 #language-list{
