--- a/DingerLab/src/main/resources/static/css/character.css
+++ b/DingerLab/src/main/resources/static/css/character.css
@@ -3,7 +3,7 @@
 html,body{
 	width : 100%;
 	height : auto;
-	background-attachment: fixed;
+	position : relative;
 }
 
 header{
@@ -47,7 +47,7 @@ header>a{
 
 section{
 	width : 80%;
-	max-height : 1000px;
+	max-width : 1000px;
 	height : auto;
 	
 	margin : 0 auto;
@@ -62,7 +62,8 @@ h3{
 
 #grid-section{
 	width : 100%;
-	height : 1200px;
+	height : auto;
+	min-height: 1000px;
 }
 
 #grid-section>li{
@@ -75,8 +76,6 @@ h3{
 }
 
 #grid-section>li:HOVER{
-	border : 0.5px solid rgba(0,0,0,0.4);
-	border-radius : 30px;
 	cursor : pointer;
 }
 
@@ -107,3 +106,121 @@ h3{
 	line-height : 20px;
 	text-align: center;
 }
+
+
+
+
+
+
+#modal{
+	width : 100%;
+	height : 100%;
+	background-color: rgba(0,0,0,0.5);
+	top : 0;
+	padding-top : 260px;
+	
+	
+	position : absolute;
+	display : none;
+}
+
+#modal-section{
+	width : 80%;
+	max-width : 1000px;
+	height : 100%;
+	background-color: white;
+	margin : 0 auto;
+	margin-top : -10%;
+	
+}
+
+#modal-container{
+	width : 80%;
+	height : 100%;
+	
+	margin : 0 auto;
+}
+
+
+
+.swiper-container{
+	width : 100%;
+	height : auto;
+	max-height : 400px;
+}
+
+.swiper-slide>img{
+	width : 100%;
+	height : 100%;
+}
+
+
+
+#modal-container>h1{
+	padding-top : 25px;
+	margin-bottom : 25px;
+	text-align: left;
+	padding-left : 45px;
+	display :inline-block;
+}
+
+.quiteBtn{
+	width : 32px;
+	height : auto;
+	display: inline-block;
+	float : right;
+	margin-top : 25px;
+}
+
+.quiteBtn:HOVER{
+	cursor: pointer;
+}
+
+#video-container{
+	width : 640px;
+	height : auto;
+	margin : 0 auto;
+	margin-bottom : 40px;
+	margin-top : 20px;
+}
+
+#video-container>iframe{
+	margin : 0 auto;
+}
+
+#modal-container > a{
+	color : black;
+	font-size : 20pt;
+	padding-bottom : 20px;
+}
+
+#modal-container > a:HOVER{
+	text-decoration: underline;
+}
+
+#description-container{
+	width : 100%;
+	height : 200px;
+	overflow: scroll;
+}
+
+#description-container>span{
+	font-size : 13pt;
+	line-height : 20pt;
+}
+
+.description-subtitle{
+	font-weight: bold;
+	color: rgba(149,148,144,0.85);
+	font-style: italic;
+	font-size : 20pt;
+	line-height : 30pt;
+	padding-top : 10px;
+	padding-bottom : 20px;
+}
+
+.description-contents{
+	font-size : 14px;
+	line-height : 20px;
+}
+
