--- a/DingerLab/src/main/resources/static/css/footer.css
+++ b/DingerLab/src/main/resources/static/css/footer.css
@@ -1,35 +1,8 @@
 @CHARSET "UTF-8";
 
-footer{
-	width : 100%;
-	height : 300px;
-}
-
-#bg-image-section{
-	width : 100%;
-	height : 100%;
-}
-
-#bg-image-section>img{
-	width : 100%;
-	height : 100%;
-	transform-origin : top;
-}
-
-#bg-layer-section{
-	width : 100%;
-	height : 100%;
-	position : absolute;
-	top : 0;
-	
-	background-color: rgba(255, 255, 255, 0.6);
-	z-index : 500;
-}
-
-#bg-layer-section>div{
-	width : 80%;
-	max-width : 1000px;
-	height : auto;
-	margin : 0 auto;
-	padding-top : 100px;
+html,body{
+	background-attachment: fixed;
+	background-position: bottom;
+	background-repeat: none;
+	background-size: cover;
 }
