1. 레이어 엎어지는 내용 수정 2. 본문 내용 문단 유지 3. 팝업창 넓이 확장 4. 아이콘들 색상 로고의 붉은색으로 수정

--- a/DingerLab/src/main/resources/static/css/header.css
+++ b/DingerLab/src/main/resources/static/css/header.css
@@ -34,7 +34,7 @@ header>a{
 }
 
 header>a>span{
-	color : red;
+	color : rgb(196,24,65);
 }
 
 header>a:HOVER{
@@ -75,5 +75,9 @@ h3{
 }
 
 .activate{
-	color : white !important;
+	color : white;
+}
+
+.swiper-pagination-bullet-active{
+	background : #c41841 none repeat scroll 0 0 !important;
 }
