--- a/DingerLab/src/main/resources/static/css/character.css
+++ b/DingerLab/src/main/resources/static/css/character.css
@@ -122,11 +122,12 @@ h3{
 	
 	position : absolute;
 	display : none;
+	z-index : 700;
 }
 
 #modal-section{
 	width : 80%;
-	max-width : 1000px;
+	max-width : 1400px;
 	height : 100%;
 	background-color: white;
 	margin : 0 auto;
@@ -169,7 +170,7 @@ h3{
 	height : auto;
 	display: inline-block;
 	float : right;
-	margin-top : 25px;
+	margin-top : 50px;
 }
 
 .quiteBtn:HOVER{
