--- a/DingerLab/src/main/resources/static/css/character.css
+++ b/DingerLab/src/main/resources/static/css/character.css
@@ -145,14 +145,20 @@ h3{
 
 
 .swiper-container{
-	width : 100%;
-	height : auto;
+	width : auto;
+	height : 100%;
 	max-height : 400px;
 }
 
+.swiper-slide{
+	
+}
+
 .swiper-slide>img{
-	width : 100%;
+	width : auto;
 	height : 100%;
+	display : block;
+	margin : 0 auto;
 }
 
 
