--- a/DingerLab/src/main/resources/static/css/index.css
+++ b/DingerLab/src/main/resources/static/css/index.css
@@ -1,71 +1,106 @@
 @CHARSET "UTF-8";
 
-html, body{
-	width : 100%;
-	height : 1500px;
+html, body {
+	width: 100%;
+	height: auto;
 }
 
-#video-section{
-	width : 100%;
-	z-index : 100;
+#video-section {
+	width: 100%;
+	z-index: 100;
 	background-size: cover;
-	overflow : hidden;
+	overflow: hidden;
 }
 
-#image-layer{
-	width : 100%;
-	height : 100%;
-	
-	background-color: rgba(0,0,0,0.5);
-	
-	position : absolute;
-	overflow : hidden;
-	z-index : 200;
-	top : 0;
+#image-layer {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	position: absolute;
+	overflow: hidden;
+	z-index: 200;
+	top: 0;
 }
 
-#image-layer>video{
+#image-layer>video {
 	min-height: 100%;
-	height : auto;
+	height: auto;
 	min-width: 100%;
-	
-	overflow : hidden;
-	position : absolute;
-	z-index : 100;
-	top : 65%;
-	left : 50%;
-	transform : translate(-50%, -65%);
-	
-	background-color: rgba(0,0,0,0.5);
+	overflow: hidden;
+	position: absolute;
+	z-index: 100;
+	top: 65%;
+	left: 50%;
+	transform: translate(-50%, -65%);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
-#icon-container{
-	width : 100%;
-	height : 50px;
-	bottom : 50px;
-	position : absolute;
-	z-index : 500;
+#icon-container {
+	width: 100%;
+	height: 50px;
+	bottom: 50px;
+	position: absolute;
+	z-index: 500;
 }
 
-#icon-section{
-	width : 50px;
-	height : 50px;
-	margin : 0 auto;
+#icon-section {
+	width: 50px;
+	height: 50px;
+	margin: 0 auto;
 	border: 2.5px solid white;
-	border-radius : 100%;
+	border-radius: 100%;
 }
 
-#icon-section:HOVER{
-	cursor : pointer;
+#icon-section:HOVER {
+	cursor: pointer;
 }
 
-#icon{
-	width : 100%;
-	height : 100%;
-	
-	margin-left : 12px;
-	margin-top : 5px;
-	font-size : 40px;
-	color : white;
+#icon {
+	width: 100%;
+	height: 100%;
+	margin-left: 12px;
+	margin-top: 5px;
+	font-size: 40px;
+	color: white;
 	font-weight: bold;
+}
+
+#contents {
+	width: 100%;
+	height: auto;
+}
+
+#contents > div{
+	
+}
+
+#introduce{
+	width : 1000px;
+	height : 100%;
+	margin : 0 auto;
+	
+	font-size : 20px;
+	text-align : center;
+	
+}
+
+#introduce > h1 {
+	text-align: center;
+	padding-top: 80px;
+}
+
+#introduce > p {
+	padding-top : 20px;
+}
+
+.swiper-container{
+	width : 100%;
+	height : 300px;
+}
+
+.swiper-slide > img{
+	width : auto;
+	height : 100%;
+	display : block;
+	margin : 0 auto;
 }
