전체적인 수정 작업 및 event, market 페이지 수정 및 가다듬기 작업 완

--- a/DingerLab/src/main/resources/static/css/event.css
+++ b/DingerLab/src/main/resources/static/css/event.css
@@ -5,10 +5,6 @@ html,body{
 	height : auto;
 }
 
-header{
-	text-align: center;
-}
-
 header>a{
 	color : black;
 }
@@ -56,7 +52,8 @@ h3{
 }
 
 .event-cell{
-	width : 80%;
+	width : 60%;
+	max-width : 500px;
 	height : auto;
 	
 	margin : 0 auto;
