--- a/DingerLab/src/main/resources/static/css/footer.css
+++ b/DingerLab/src/main/resources/static/css/footer.css
@@ -1,8 +1,38 @@
 @CHARSET "UTF-8";
 
-html,body{
-	background-attachment: fixed;
-	background-position: bottom;
-	background-repeat: none;
-	background-size: cover;
+footer{
+	width : 100%;
+	height : 50px;
+	background-color: rgb(126,126,126);
+}
+
+footer>div{
+	width : 80%;
+	max-width: 1000px;
+	height : 100%;
+	margin : 0 auto;
+}
+
+footer ul{
+	width : 100%;
+	height : 100%;
+	margin : 0;
+	padding : 0;
+}
+
+footer ul li{
+	width : calc(100%/3.00001);
+	height : 100%;
+	list-style: none;
+	color : white;
+	display : block;
+	float : left;
+}
+
+footer ul li:after{
+	content : '';
+}
+
+footer ul li a{
+	vertical-align: middle;
 }
