--- a/DingerLab/src/main/resources/static/css/index.css
+++ b/DingerLab/src/main/resources/static/css/index.css
@@ -68,6 +68,7 @@ html, body {
 #contents {
 	width: 100%;
 	height: auto;
+	margin-bottom : 30px;
 }
 
 #contents > div{
@@ -93,14 +94,14 @@ html, body {
 	padding-top : 20px;
 }
 
-.swiper-container{
+#introduce > div{
 	width : 100%;
-	height : 300px;
+	height : auto;
 }
 
-.swiper-slide > img{
-	width : auto;
-	height : 100%;
-	display : block;
+#introduce > div > img{
+	width : 80%;
+	height : auto;
 	margin : 0 auto;
+	display : block;
 }
