footer추가 css수정 1차 컨펌 완

--- a/DingerLab/src/main/resources/static/css/header.css
+++ b/DingerLab/src/main/resources/static/css/header.css
@@ -3,6 +3,9 @@
 
 html,body{
 	font-family: "Nanum Gothic", sans-serif !important;
+	background-attachment: fixed;
+    background-position: center bottom;
+    background-size: cover;
 }
 
 header{
