--- a/DingerLab/src/main/resources/static/css/footer.css
+++ b/DingerLab/src/main/resources/static/css/footer.css
@@ -4,6 +4,7 @@ footer{
 	width : 100%;
 	height : 50px;
 	background-color: rgb(126,126,126);
+	margin-top : 30px;
 }
 
 footer>div{
@@ -25,14 +26,13 @@ footer ul li{
 	height : 100%;
 	list-style: none;
 	color : white;
-	display : block;
+	display : inline-block;
 	float : left;
+	text-align: center;
+	line-height : 50px;
+	font-size : 13px;
 }
 
 footer ul li:after{
 	content : '';
-}
-
-footer ul li a{
-	vertical-align: middle;
 }
