--- a/DingerLab/src/main/resources/static/css/market.css
+++ b/DingerLab/src/main/resources/static/css/market.css
@@ -3,6 +3,7 @@
 body,html{
 	width : 100%;
 	height : 100%;
+	overflow-y: hidden;
 }
 
 header{
@@ -102,7 +103,7 @@ h3{
 	width : 100%;
 	height : 100%;
 	top : 0;
-	padding-top : 260px;
+	padding-top : 160px;
 	background-color: rgba(0,0,0,0.5);
 	position : absolute;
 	display : none;
@@ -112,7 +113,7 @@ h3{
 #modal-section{
 	width : 80%;
 	max-width : 1400px;
-	height : 100%;
+	height : 80%;
 	background-color: white;
 	margin : 0 auto;
 	margin-top : -10%;
@@ -147,7 +148,7 @@ h3{
 
 #googleMap{
 	width : 80%;
-	height : 400px;
+	height : 60%;
 	margin : 0 auto;
 }
 
