1. 각 구매하기 버튼 가운데 정렬 2. 쉐푸 영상이 안 나오는 부분 해결 3. 메인 페이지 아래에 * 익10 및 크롬 최적화 문구 추가 4. Event, media 페이지 준비중 이미지 추

--- a/DingerLab/src/main/resources/static/css/event.css
+++ b/DingerLab/src/main/resources/static/css/event.css
@@ -69,3 +69,11 @@ footer{
 	position : absolute;
 	bottom : 0;
 }
+
+#temp-picture{
+	width : 40%;
+	max-width : 500px;
+	display : block;
+	margin : 0 auto;
+	border-radius : 10px;
+}
