--- a/DingerLab/src/main/resources/static/css/character.css
+++ b/DingerLab/src/main/resources/static/css/character.css
@@ -194,10 +194,8 @@ h3{
 	color : black;
 	font-size : 20pt;
 	padding-bottom : 20px;
-}
-
-#modal-container > a:HOVER{
-	text-decoration: underline;
+	display : block;
+	text-align: center;
 }
 
 #description-container{
